--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,34 @@
 
+name: Build Windows .exe
+
+on:
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
+          if test -f requirements.txt; then pip install -r requirements.txt; fi
+
+      - name: Build executable
+        run: |
+          pyinstaller --onefile autoskip_dialogue.py
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: genshin-dialogue-autoskip-exe
+          path: dist/*.exe
