--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
-          if test -f requirements.txt; then pip install -r requirements.txt; fi
+          if (Test-Path "requirements.txt") {
+            pip install -r requirements.txt
+          }
 
       - name: Build executable
         run: |
