--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Build Windows .exe
 
 on:
@@ -27,7 +26,8 @@ jobs:
 
       - name: Build executable
         run: |
-          pyinstaller --onefile autoskip_dialogue.py
+          pyinstaller --noconfirm --onefile autoskip_dialogue.py
+        shell: pwsh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
